#97 Entfernung DTO - removed boilerplate DTOs and mappers